[package]
name = "hyperf"
version = "1.0.0"
authors = [ "Dolph Mathews <dolph.mathews@gmail.com>" ]
description = "A modern command line tool for measuring HTTP performance."
license = "Apache-2.0/MIT"
repository = "https://github.com/dolph/hyperf"
documentation = "https://github.com/dolph/hyperf"

[dependencies]
argparse = "*"
env_logger = "*"
hyper = "*"
log = "*"
time = "*"
